--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -16,7 +16,7 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=eDP-1,1920x1200@60,0x0,1
-
+monitor=HDMI-A-1,2560x1440x@170,1920x0,1
 
 ###################
 ### MY PROGRAMS ###
@@ -27,7 +27,8 @@ monitor=eDP-1,1920x1200@60,0x0,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = .config/rofi/scripts/launcher_t6
+$idlehandler = hypridle
 
 
 #################
@@ -39,14 +40,12 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar
+exec-once = waybar &
 exec-once = hyprpaper
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dunst 
 exec-once = wl-paste --watch cliphist store
-
-#Opening Kde Wallet
-exec-once = qdbus6 org.kde.kwalletd6 /modules/kwalletd6 org.kde.KWallet.open kdewallet 0 login
+exec-once = $idlehandler
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -89,7 +88,7 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(f0f0f0aa) rgba(2e2c2cee) 150deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -193,7 +192,7 @@ input {
     kb_layout = fr
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = fkeys:basic_13-24
     kb_rules =
 
     follow_mouse = 1
@@ -225,7 +224,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, Q, exec, $terminal --hold fish -c "fastfetch"
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
@@ -290,8 +289,18 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+# screenshot 
+bind =, XF86SelectiveScreenshot, exec, grim -g "$(slurp)" - | wl-copy && wl-paste > ~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png | dunstify "Screenshot of the region taken" -t 1000 # screenshot of a region 
+bind = SHIFT, XF86SelectiveScreenshot, exec, grim - | wl-copy && wl-paste > ~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png | dunstify "Screenshot of whole screen taken" -t 1000 # screenshot of the whole screen
+
 #clipboard (cliphist)
 bind = $mainMod,B, exec, cliphist list | wofi -S dmenu | cliphist decode | wl-copy 
+
+#Power menu
+bind = $mainMod,escape,exec,.config/rofi/scripts/powermenu_t6
+
+#Hyprlock
+bind = $mainMod,l,exec,hyprlock
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
